--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -18,6 +18,7 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
 		crossorigin="anonymous">
+	<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
